Fix header height on mobile browsers

--- a/web/src/scss/pages/_home.scss
+++ b/web/src/scss/pages/_home.scss
@@ -2,6 +2,7 @@
   .hero-header {
     width: 100%;
     height: calc(100vh - 3.6rem);
+    height: calc(var(--vh, 1vh) * 100 - 3.6rem);
   } 
 
   .intro > .container {
